Add FOSM Site (Prototype) to index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <section class="previews" aria-label="Available public previews">
         <h2>Available Public Previews</h2>
         <div class="preview-list">
-          <a href="/fosm-site">FOSM Site</a>
+          <a href="/fosm-site">FOSM Site (Prototype)</a>
           <a href="https://demo.jread.com" target="_blank" rel="noreferrer noopener"
             >Demo Apps</a
           >
